--- a/index.html
+++ b/index.html
@@ -56,7 +56,13 @@
       <div class="password-confirm-password">
         <div class="password-container">
           <label for="password">Password</label>
-          <input type="password" id="password" name="password" required />
+          <input
+            type="password"
+            id="password"
+            name="password"
+            class="error"
+            required
+          />
         </div>
         <div class="confirm-password-container">
           <label for="confirmPassword">Confirm Password</label>
@@ -64,6 +70,7 @@
             type="password"
             id="confirmPassword"
             name="confirmPassword"
+            class="error"
             required
           />
         </div>
