Checking that the password fields match each other

--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
           >
             Show
           </button>
+          <div class="error-message" id="passwordError"></div>
         </div>
       </div>
       <div class="button-and-paragraph">
